@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclInt.h,v 1.202.2.39 2005/09/15 20:58:39 dgp Exp $
+ * RCS: @(#) $Id: tclInt.h,v 1.202.2.40 2005/09/16 19:29:02 dgp Exp $
  */
 
 #ifndef _TCLINT
@@ -2869,6 +2869,8 @@ MODULE_SCOPE void *	TclBNAlloc(size_t nBytes);
 MODULE_SCOPE void *	TclBNRealloc(void *oldBlock, size_t newNBytes);
 MODULE_SCOPE void	TclBNFree(void *block);
 MODULE_SCOPE void	TclBNInitBignumFromLong(mp_int *bignum, long initVal);
+MODULE_SCOPE void	TclBNInitBignumFromWideInt(mp_int* bignum,
+			    Tcl_WideInt initVal);
 MODULE_SCOPE void	TclBNInitBignumFromWideUInt(mp_int* bignum,
 			    Tcl_WideUInt initVal);
 
